[tool.poetry]
name = "actions"
version = "0.0.0"
description = "A placeholder for testing."
authors = ["Big Ladder Software"]
license = "BSD-3"
readme = "README.md"
repository = "https://github.com/bigladder/github-actions"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
